# gitversiondumper

./: README.rst  pyproject.toml
gitversiondumper/: __init__.py  commands.py  git.py
